# cap

./: .gitignore  README.md  deep-research-report.md  pyproject.toml
configs/model/: cap_26m.json
configs/train/: hackernews_adapt.json  tinystories_fast_dev.json  tinystories_full.json  tinystories_quality.json  tinystories_quality_continue.json  tinystories_sanity.json
docs/: 01-overview-and-prereqs.md  02-environment-setup.md  03-project-layout-and-guidelines.md  04-tokenizer-training.md  05-pretraining-on-tinystories.md  06-evaluation-and-sampling.md  07-export-to-gguf.md  08-hacker-news-domain-adaptation.md  09-instruction-tuning.md
scripts/: adapt_hackernews.py  check_backend.py  eval_checkpoint.py  eval_sample.py  export_gguf.sh  prepare_hackernews.py  setup_env.sh  train_pretrain.py  train_tokenizer.py
skills/cap-repo/: SKILL.md
skills/cap-repo/agents/: openai.yaml
skills/cap-repo/references/: github.md  mps.md  workflow.md
src/cap/: __init__.py  config.py  data.py  modeling.py
